Styling for picture and rover page

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 code {
@@ -12,7 +14,18 @@ code {
     monospace;
 }
 
-img{
-  width: 300px;
-  
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+body::-webkit-scrollbar-track {
+  background: #333333;
+  border-radius: 5px;
+}
+body::-webkit-scrollbar-thumb {
+  background: #555555; 
+  border-radius: 5px;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background: #777777;
 }
