--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #000000;
   color: #ffffff;
+  position: relative;
 }
 
 code {
@@ -34,4 +35,4 @@ a{
   color: #ffffff;
   text-decoration: none;
   text-align: center;
-};
+}
