--- a/src/picture.css
+++ b/src/picture.css
@@ -44,6 +44,39 @@ button{
     transform: scale(1);
 }
 
+.popup{
+    z-index: 999;
+    background-color: rgba(0, 0, 0,0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    transition: all 0.5s ease-in-out;
+}
+
+.popup.open{
+    display: block;
+}
+.popup.open img{
+  animation: popup 0.2s;
+}
+@keyframes popup {
+    0%{
+      transform: scale(0);
+    }
+    100%{
+      transform: scale(1);
+    }
+  }
+
+.popup img{
+    padding-top: 2.5vh;
+    width: 95%;
+    height: 95vh;
+}
+
 button.clicked{
     animation: grow-and-shrink 0.5s;
 }
