--- a/src/rover.css
+++ b/src/rover.css
@@ -20,3 +20,9 @@ input::-webkit-datetime-edit {
 ::-webkit-calendar-picker-indicator {
     filter: invert(1);
 }
+
+button.paginate{
+    background-color:#333333;
+    padding: 15px;
+    margin: 35px auto;
+}
