--- a/src/picture.css
+++ b/src/picture.css
@@ -80,6 +80,14 @@ button{
 button.clicked{
     animation: grow-and-shrink 0.5s;
 }
+.close-popup{
+    z-index: 100;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+}
 
 @keyframes grow-and-shrink {
     0% {
